tests/fixtures/invalid/datetime_scale_mismatch.gcl
param t_tt: Datetime<TT> = epoch("2024-11-05T12:00:00", TT);
param t_utc: Datetime = datetime("2024-11-05T12:00:00 UTC");
node bad: Time = @t_tt - @t_utc;
